[gd_scene load_steps=10 format=3 uid="uid://shgwkgqjj7x1"]

[ext_resource type="Script" path="res://scripts/level_exit_portal.gd" id="1_51yx3"]
[ext_resource type="ArrayMesh" uid="uid://45a7pdtg1obi" path="res://assets/Portal.obj" id="2_hbohm"]
[ext_resource type="ArrayMesh" uid="uid://dk4rmh76cowcv" path="res://assets/ExitSign.obj" id="3_b64ha"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_p3n8x"]
data = PackedVector3Array(-6, 9, -1.1, -6, 10.6, 1.1, -6, 9, 1.1, -6, 9, -1.1, -6, 10.6, -1.1, -6, 10.6, 1.1, -5.9, 8.9, -1.1, -5.9, 9, 1.1, -5.9, 8.9, 1.1, -5.9, 8.9, -1.1, -5.9, 9, -1.1, -5.9, 9, 1.1, -5.9, 10.6, -1.1, -5.9, 10.7, 1.1, -5.9, 10.6, 1.1, -5.9, 10.6, -1.1, -5.9, 10.7, -1.1, -5.9, 10.7, 1.1, -5.8, 8.5, 0.7, -5.8, 8.9, 0.8, -5.8, 8.5, 0.8, -5.8, 8.5, 0.7, -5.8, 8.9, 0.7, -5.8, 8.9, 0.8, -5.8, 8.5, -0.8, -5.8, 8.9, -0.7, -5.8, 8.5, -0.7, -5.8, 8.5, -0.8, -5.8, 8.9, -0.8, -5.8, 8.9, -0.7, -5.7, 8.4, 0.7, -5.7, 8.5, 0.8, -5.7, 8.4, 0.8, -5.7, 8.4, 0.7, -5.7, 8.5, 0.7, -5.7, 8.5, 0.8, -5.7, 8.4, -0.8, -5.7, 8.5, -0.7, -5.7, 8.4, -0.7, -5.7, 8.4, -0.8, -5.7, 8.5, -0.8, -5.7, 8.5, -0.7, -5.6, 8.3, 0.7, -5.6, 8.4, 0.8, -5.6, 8.3, 0.8, -5.6, 8.3, 0.7, -5.6, 8.4, 0.7, -5.6, 8.4, 0.8, -5.6, 8.3, -0.8, -5.6, 8.4, -0.7, -5.6, 8.3, -0.7, -5.6, 8.3, -0.8, -5.6, 8.4, -0.8, -5.6, 8.4, -0.7, -5.5, 8.2, 0.7, -5.5, 8.3, 0.8, -5.5, 8.2, 0.8, -5.5, 8.2, 0.7, -5.5, 8.3, 0.7, -5.5, 8.3, 0.8, -5.5, 8.2, -0.8, -5.5, 8.3, -0.7, -5.5, 8.2, -0.7, -5.5, 8.2, -0.8, -5.5, 8.3, -0.8, -5.5, 8.3, -0.7, -5.3, 8.1, 0.7, -5.3, 8.2, 0.8, -5.3, 8.1, 0.8, -5.3, 8.1, 0.7, -5.3, 8.2, 0.7, -5.3, 8.2, 0.8, -5.3, 8.1, -0.8, -5.3, 8.2, -0.7, -5.3, 8.1, -0.7, -5.3, 8.1, -0.8, -5.3, 8.2, -0.8, -5.3, 8.2, -0.7, -4.9, 8, 0.7, -4.9, 8.1, 0.8, -4.9, 8, 0.8, -4.9, 8, 0.7, -4.9, 8.1, 0.7, -4.9, 8.1, 0.8, -4.9, 8, -0.8, -4.9, 8.1, -0.7, -4.9, 8, -0.7, -4.9, 8, -0.8, -4.9, 8.1, -0.8, -4.9, 8.1, -0.7, -4.8, 0, -1.5, -4.8, 0.1, 1.5, -4.8, 0, 1.5, -4.8, 0, -1.5, -4.8, 0.1, -1.5, -4.8, 0.1, 1.5, -4.7, 0, 1.5, -4.7, 0.1, 1.6, -4.7, 0, 1.6, -4.7, 0, 1.5, -4.7, 0.1, 1.5, -4.7, 0.1, 1.6, -4.7, 0, -1.6, -4.7, 0.1, -1.5, -4.7, 0, -1.5, -4.7, 0, -1.6, -4.7, 0.1, -1.6, -4.7, 0.1, -1.5, -4.5, 8.1, 0.7, -4.5, 8.8, 0.8, -4.5, 8.1, 0.8, -4.5, 8.1, 0.7, -4.5, 8.8, 0.7, -4.5, 8.8, 0.8, -4.5, 8.1, -0.8, -4.5, 8.8, -0.7, -4.5, 8.1, -0.7, -4.5, 8.1, -0.8, -4.5, 8.8, -0.8, -4.5, 8.8, -0.7, -4.5, 9.1, -1.1, -4.5, 10.5, 1.1, -4.5, 9.1, 1.1, -4.5, 9.1, -1.1, -4.5, 10.5, -1.1, -4.5, 10.5, 1.1, -4.4, 0.1, -1.2, -4.4, 8, 0.8, -4.4, 0.1, 1.2, -4.4, 0.1, -1.2, -4.4, 8, 0.7, -4.4, 8, 0.8, -4.4, 0.1, -1.2, -4.4, 8, -0.7, -4.4, 8, 0.7, -4.4, 0.1, -1.2, -4.4, 8, -0.8, -4.4, 8, -0.7, -4.4, 8, 0.8, -4.4, 8.9, 1.1, -4.4, 0.1, 1.2, -4.4, 8, 0.8, -4.4, 8.9, 0.8, -4.4, 8.9, 1.1, -4.4, 8, -0.7, -4.4, 8.9, 0.7, -4.4, 8, 0.7, -4.4, 8, -0.7, -4.4, 8.9, -0.7, -4.4, 8.9, 0.7, -4.4, 0.1, -1.2, -4.4, 8.9, -0.8, -4.4, 8, -0.8, -4.4, 0.1, -1.2, -4.4, 8.9, -1.1, -4.4, 8.9, -0.8, -4.4, 8.9, 1.1, -4.4, 10.7, 1.1, -4.4, 0.1, 1.2, -4.4, 0.1, -1.2, -4.4, 10.7, -1.1, -4.4, 8.9, -1.1, -4.4, 10.7, 1.1, -4.4, 12.6, 1.2, -4.4, 0.1, 1.2, -4.4, 10.7, -1.1, -4.4, 12.6, 1.2, -4.4, 10.7, 1.1, -4.4, 0.1, -1.2, -4.4, 12.6, -1.2, -4.4, 10.7, -1.1, -4.4, 10.7, -1.1, -4.4, 12.6, -1.2, -4.4, 12.6, 1.2, -4.3, 12.6, -1.2, -4.3, 12.7, 1.2, -4.3, 12.6, 1.2, -4.3, 12.6, -1.2, -4.3, 12.7, -1.2, -4.3, 12.7, 1.2, -4.2, 12.7, -1.2, -4.2, 12.8, 1.2, -4.2, 12.7, 1.2, -4.2, 12.7, -1.2, -4.2, 12.8, -1.2, -4.2, 12.8, 1.2, 4, 0.1, -1.2, 4, 12.3, 1.2, 4, 0.1, 1.2, 4, 0.1, -1.2, 4, 12.3, -1.2, 4, 12.3, 1.2, -5.9, 9.1, -1.1, -5.9, 9.1, 1.1, -5.9, 10.5, 1.1, -5.9, 9.1, -1.1, -5.9, 10.5, 1.1, -5.9, 10.5, -1.1, -5.7, 8.6, 0.7, -5.7, 8.6, 0.8, -5.7, 8.8, 0.8, -5.7, 8.6, 0.7, -5.7, 8.8, 0.8, -5.7, 8.8, 0.7, -5.7, 8.6, -0.8, -5.7, 8.6, -0.7, -5.7, 8.8, -0.7, -5.7, 8.6, -0.8, -5.7, 8.8, -0.7, -5.7, 8.8, -0.8, -5.6, 8.5, 0.7, -5.6, 8.5, 0.8, -5.6, 8.6, 0.8, -5.6, 8.5, 0.7, -5.6, 8.6, 0.8, -5.6, 8.6, 0.7, -5.6, 8.5, -0.8, -5.6, 8.5, -0.7, -5.6, 8.6, -0.7, -5.6, 8.5, -0.8, -5.6, 8.6, -0.7, -5.6, 8.6, -0.8, -5.5, 8.4, 0.7, -5.5, 8.4, 0.8, -5.5, 8.5, 0.8, -5.5, 8.4, 0.7, -5.5, 8.5, 0.8, -5.5, 8.5, 0.7, -5.5, 8.4, -0.8, -5.5, 8.4, -0.7, -5.5, 8.5, -0.7, -5.5, 8.4, -0.8, -5.5, 8.5, -0.7, -5.5, 8.5, -0.8, -5.4, 8.3, 0.7, -5.4, 8.3, 0.8, -5.4, 8.4, 0.8, -5.4, 8.3, 0.7, -5.4, 8.4, 0.8, -5.4, 8.4, 0.7, -5.4, 8.3, -0.8, -5.4, 8.3, -0.7, -5.4, 8.4, -0.7, -5.4, 8.3, -0.8, -5.4, 8.4, -0.7, -5.4, 8.4, -0.8, -5.2, 8.2, 0.7, -5.2, 8.2, 0.8, -5.2, 8.3, 0.8, -5.2, 8.2, 0.7, -5.2, 8.3, 0.8, -5.2, 8.3, 0.7, -5.2, 8.2, -0.8, -5.2, 8.2, -0.7, -5.2, 8.3, -0.7, -5.2, 8.2, -0.8, -5.2, 8.3, -0.7, -5.2, 8.3, -0.8, -4.8, 8.1, 0.7, -4.8, 8.1, 0.8, -4.8, 8.2, 0.8, -4.8, 8.1, 0.7, -4.8, 8.2, 0.8, -4.8, 8.2, 0.7, -4.8, 8.1, -0.8, -4.8, 8.1, -0.7, -4.8, 8.2, -0.7, -4.8, 8.1, -0.8, -4.8, 8.2, -0.7, -4.8, 8.2, -0.8, -4, 0.1, -1.2, -4, 0.1, 1.2, -4, 12.3, 1.2, -4, 0.1, -1.2, -4, 12.3, 1.2, -4, 12.3, -1.2, 4.2, 12.7, -1.2, 4.2, 12.7, 1.2, 4.2, 12.8, 1.2, 4.2, 12.7, -1.2, 4.2, 12.8, 1.2, 4.2, 12.8, -1.2, 4.3, 8.5, 0.4, 4.3, 8.5, 0.5, 4.3, 8.6, 0.5, 4.3, 8.5, 0.4, 4.3, 8.6, 0.5, 4.3, 8.6, 0.4, 4.3, 8.5, -0.5, 4.3, 8.5, -0.4, 4.3, 8.6, -0.4, 4.3, 8.5, -0.5, 4.3, 8.6, -0.4, 4.3, 8.6, -0.5, 4.3, 9.6, -0.1, 4.3, 9.6, 0.1, 4.3, 9.7, 0.1, 4.3, 9.6, -0.1, 4.3, 9.7, 0.1, 4.3, 9.7, -0.1, 4.3, 12.6, -1.2, 4.3, 12.6, 1.2, 4.3, 12.7, 1.2, 4.3, 12.6, -1.2, 4.3, 12.7, 1.2, 4.3, 12.7, -1.2, 4.4, 0.1, -1.2, 4.4, 0.1, 1.2, 4.4, 8.5, 0.5, 4.4, 0.1, -1.2, 4.4, 8.5, 0.5, 4.4, 8.5, 0.4, 4.4, 0.1, -1.2, 4.4, 8.5, 0.4, 4.4, 8.5, -0.4, 4.4, 0.1, -1.2, 4.4, 8.5, -0.4, 4.4, 8.5, -0.5, 4.4, 8.5, 0.5, 4.4, 0.1, 1.2, 4.4, 8.6, 0.5, 4.4, 8.5, -0.4, 4.4, 8.5, 0.4, 4.4, 8.6, 0.4, 4.4, 8.5, -0.4, 4.4, 8.6, 0.4, 4.4, 8.6, -0.4, 4.4, 0.1, -1.2, 4.4, 8.5, -0.5, 4.4, 8.6, -0.5, 4.4, 8.6, -0.4, 4.4, 8.6, 0.4, 4.4, 9.6, 0.1, 4.4, 8.6, -0.5, 4.4, 8.6, -0.4, 4.4, 9.6, 0.1, 4.4, 8.6, 0.4, 4.4, 8.6, 0.5, 4.4, 9.6, 0.1, 4.4, 8.6, -0.5, 4.4, 9.6, 0.1, 4.4, 9.6, -0.1, 4.4, 9.6, 0.1, 4.4, 8.6, 0.5, 4.4, 9.7, 0.1, 4.4, 8.6, -0.5, 4.4, 9.6, -0.1, 4.4, 9.7, -0.1, 4.4, 8.6, 0.5, 4.4, 0.1, 1.2, 4.4, 12.6, 1.2, 4.4, 9.7, -0.1, 4.4, 9.7, 0.1, 4.4, 12.6, 1.2, 4.4, 9.7, 0.1, 4.4, 8.6, 0.5, 4.4, 12.6, 1.2, 4.4, 0.1, -1.2, 4.4, 8.6, -0.5, 4.4, 12.6, -1.2, 4.4, 9.7, -0.1, 4.4, 12.6, 1.2, 4.4, 12.6, -1.2, 4.4, 8.6, -0.5, 4.4, 9.7, -0.1, 4.4, 12.6, -1.2, 4.7, 0, 1.5, 4.7, 0, 1.6, 4.7, 0.1, 1.6, 4.7, 0, 1.5, 4.7, 0.1, 1.6, 4.7, 0.1, 1.5, 4.7, 0, -1.6, 4.7, 0, -1.5, 4.7, 0.1, -1.5, 4.7, 0, -1.6, 4.7, 0.1, -1.5, 4.7, 0.1, -1.6, 4.8, 0, -1.5, 4.8, 0, 1.5, 4.8, 0.1, 1.5, 4.8, 0, -1.5, 4.8, 0.1, 1.5, 4.8, 0.1, -1.5, -4.7, 0.1, 1.6, 4.7, 0, 1.6, -4.7, 0, 1.6, -4.7, 0.1, 1.6, 4.7, 0.1, 1.6, 4.7, 0, 1.6, -4.8, 0.1, 1.5, -4.7, 0, 1.5, -4.8, 0, 1.5, -4.8, 0.1, 1.5, -4.7, 0.1, 1.5, -4.7, 0, 1.5, 4.7, 0.1, 1.5, 4.8, 0, 1.5, 4.7, 0, 1.5, 4.7, 0.1, 1.5, 4.8, 0.1, 1.5, 4.8, 0, 1.5, -4.4, 12.6, 1.2, -4.3, 12.6, 1.2, -4.4, 0.1, 1.2, -4.3, 12.7, 1.2, -4.2, 12.7, 1.2, -4.3, 12.6, 1.2, -4.3, 12.6, 1.2, -4, 0.1, 1.2, -4.4, 0.1, 1.2, -4.2, 12.8, 1.2, -4, 0.1, 1.2, -4.2, 12.7, 1.2, -4.2, 12.7, 1.2, -4, 0.1, 1.2, -4.3, 12.6, 1.2, -4.2, 12.8, 1.2, -4, 12.3, 1.2, -4, 0.1, 1.2, -4.2, 12.8, 1.2, 4, 12.3, 1.2, -4, 12.3, 1.2, -4.2, 12.8, 1.2, 4.2, 12.7, 1.2, 4, 12.3, 1.2, 4, 12.3, 1.2, 4.2, 12.7, 1.2, 4, 0.1, 1.2, -4.2, 12.8, 1.2, 4.2, 12.8, 1.2, 4.2, 12.7, 1.2, 4.2, 12.7, 1.2, 4.3, 12.6, 1.2, 4, 0.1, 1.2, 4.2, 12.7, 1.2, 4.3, 12.7, 1.2, 4.3, 12.6, 1.2, 4.3, 12.6, 1.2, 4.4, 0.1, 1.2, 4, 0.1, 1.2, 4.3, 12.6, 1.2, 4.4, 12.6, 1.2, 4.4, 0.1, 1.2, -6, 10.6, 1.1, -5.9, 9, 1.1, -6, 9, 1.1, -6, 10.6, 1.1, -5.9, 9.1, 1.1, -5.9, 9, 1.1, -6, 10.6, 1.1, -5.9, 10.5, 1.1, -5.9, 9.1, 1.1, -6, 10.6, 1.1, -5.9, 10.6, 1.1, -5.9, 10.5, 1.1, -5.9, 10.7, 1.1, -5.8, 10.5, 1.1, -5.9, 10.6, 1.1, -5.9, 10.6, 1.1, -5.8, 10.5, 1.1, -5.9, 10.5, 1.1, -5.9, 10.7, 1.1, -5.8, 10.6, 1.1, -5.8, 10.5, 1.1, -5.8, 10.6, 1.1, -5.7, 10.5, 1.1, -5.8, 10.5, 1.1, -5.9, 10.7, 1.1, -5.7, 10.6, 1.1, -5.8, 10.6, 1.1, -5.8, 10.6, 1.1, -5.7, 10.6, 1.1, -5.7, 10.5, 1.1, -5.7, 10.6, 1.1, -5.6, 10.5, 1.1, -5.7, 10.5, 1.1, -5.9, 10.7, 1.1, -5.6, 10.6, 1.1, -5.7, 10.6, 1.1, -5.7, 10.6, 1.1, -5.6, 10.6, 1.1, -5.6, 10.5, 1.1, -5.9, 9, 1.1, -4.5, 9.1, 1.1, -5.9, 8.9, 1.1, -5.9, 9.1, 1.1, -4.5, 9.1, 1.1, -5.9, 9, 1.1, -5.6, 10.6, 1.1, -4.5, 10.5, 1.1, -5.6, 10.5, 1.1, -4.5, 9.1, 1.1, -4.4, 8.9, 1.1, -5.9, 8.9, 1.1, -4.5, 10.5, 1.1, -4.4, 8.9, 1.1, -4.5, 9.1, 1.1, -5.9, 10.7, 1.1, -4.4, 10.7, 1.1, -5.6, 10.6, 1.1, -4.5, 10.5, 1.1, -4.4, 10.7, 1.1, -4.4, 8.9, 1.1, -5.6, 10.6, 1.1, -4.4, 10.7, 1.1, -4.5, 10.5, 1.1, -5.8, 8.9, 0.8, -5.7, 8.5, 0.8, -5.8, 8.5, 0.8, -5.8, 8.9, 0.8, -5.7, 8.6, 0.8, -5.7, 8.5, 0.8, -5.8, 8.9, 0.8, -5.7, 8.8, 0.8, -5.7, 8.6, 0.8, -5.7, 8.5, 0.8, -5.6, 8.4, 0.8, -5.7, 8.4, 0.8, -5.7, 8.6, 0.8, -5.6, 8.4, 0.8, -5.7, 8.5, 0.8, -5.7, 8.6, 0.8, -5.6, 8.5, 0.8, -5.6, 8.4, 0.8, -5.7, 8.6, 0.8, -5.6, 8.6, 0.8, -5.6, 8.5, 0.8, -5.6, 8.4, 0.8, -5.5, 8.3, 0.8, -5.6, 8.3, 0.8, -5.6, 8.5, 0.8, -5.5, 8.3, 0.8, -5.6, 8.4, 0.8, -5.6, 8.5, 0.8, -5.5, 8.4, 0.8, -5.5, 8.3, 0.8, -5.6, 8.5, 0.8, -5.5, 8.5, 0.8, -5.5, 8.4, 0.8, -5.5, 8.3, 0.8, -5.4, 8.3, 0.8, -5.5, 8.2, 0.8, -5.5, 8.4, 0.8, -5.4, 8.3, 0.8, -5.5, 8.3, 0.8, -5.5, 8.4, 0.8, -5.4, 8.4, 0.8, -5.4, 8.3, 0.8, -5.4, 8.3, 0.8, -5.3, 8.2, 0.8, -5.5, 8.2, 0.8, -5.4, 8.3, 0.8, -5.2, 8.2, 0.8, -5.3, 8.2, 0.8, -5.3, 8.2, 0.8, -5.2, 8.2, 0.8, -5.3, 8.1, 0.8, -5.4, 8.3, 0.8, -5.2, 8.3, 0.8, -5.2, 8.2, 0.8, -5.2, 8.2, 0.8, -4.9, 8.1, 0.8, -5.3, 8.1, 0.8, -5.2, 8.2, 0.8, -4.8, 8.1, 0.8, -4.9, 8.1, 0.8, -4.9, 8.1, 0.8, -4.8, 8.1, 0.8, -4.9, 8, 0.8, -5.2, 8.2, 0.8, -4.8, 8.2, 0.8, -4.8, 8.1, 0.8, -4.8, 8.1, 0.8, -4.5, 8.1, 0.8, -4.9, 8, 0.8, -5.8, 8.9, 0.8, -4.5, 8.8, 0.8, -5.7, 8.8, 0.8, -4.5, 8.1, 0.8, -4.4, 8, 0.8, -4.9, 8, 0.8, -4.5, 8.8, 0.8, -4.4, 8, 0.8, -4.5, 8.1, 0.8, -5.8, 8.9, 0.8, -4.4, 8.9, 0.8, -4.5, 8.8, 0.8, -4.5, 8.8, 0.8, -4.4, 8.9, 0.8, -4.4, 8, 0.8, 4.3, 8.6, 0.4, 4.4, 8.5, 0.4, 4.3, 8.5, 0.4, 4.3, 8.6, 0.4, 4.4, 8.6, 0.4, 4.4, 8.5, 0.4, 4.3, 9.7, -0.1, 4.4, 9.6, -0.1, 4.3, 9.6, -0.1, 4.3, 9.7, -0.1, 4.4, 9.7, -0.1, 4.4, 9.6, -0.1, 4.3, 8.6, -0.5, 4.4, 8.5, -0.5, 4.3, 8.5, -0.5, 4.3, 8.6, -0.5, 4.4, 8.6, -0.5, 4.4, 8.5, -0.5, -5.8, 8.9, -0.7, -5.7, 8.5, -0.7, -5.8, 8.5, -0.7, -5.8, 8.9, -0.7, -5.7, 8.6, -0.7, -5.7, 8.5, -0.7, -5.8, 8.9, -0.7, -5.7, 8.8, -0.7, -5.7, 8.6, -0.7, -5.7, 8.5, -0.7, -5.6, 8.4, -0.7, -5.7, 8.4, -0.7, -5.7, 8.6, -0.7, -5.6, 8.4, -0.7, -5.7, 8.5, -0.7, -5.7, 8.6, -0.7, -5.6, 8.5, -0.7, -5.6, 8.4, -0.7, -5.7, 8.6, -0.7, -5.6, 8.6, -0.7, -5.6, 8.5, -0.7, -5.6, 8.4, -0.7, -5.5, 8.3, -0.7, -5.6, 8.3, -0.7, -5.6, 8.5, -0.7, -5.5, 8.3, -0.7, -5.6, 8.4, -0.7, -5.6, 8.5, -0.7, -5.5, 8.4, -0.7, -5.5, 8.3, -0.7, -5.6, 8.5, -0.7, -5.5, 8.5, -0.7, -5.5, 8.4, -0.7, -5.5, 8.3, -0.7, -5.4, 8.3, -0.7, -5.5, 8.2, -0.7, -5.5, 8.4, -0.7, -5.4, 8.3, -0.7, -5.5, 8.3, -0.7, -5.5, 8.4, -0.7, -5.4, 8.4, -0.7, -5.4, 8.3, -0.7, -5.4, 8.3, -0.7, -5.3, 8.2, -0.7, -5.5, 8.2, -0.7, -5.4, 8.3, -0.7, -5.2, 8.2, -0.7, -5.3, 8.2, -0.7, -5.3, 8.2, -0.7, -5.2, 8.2, -0.7, -5.3, 8.1, -0.7, -5.4, 8.3, -0.7, -5.2, 8.3, -0.7, -5.2, 8.2, -0.7, -5.2, 8.2, -0.7, -4.9, 8.1, -0.7, -5.3, 8.1, -0.7, -5.2, 8.2, -0.7, -4.8, 8.1, -0.7, -4.9, 8.1, -0.7, -4.9, 8.1, -0.7, -4.8, 8.1, -0.7, -4.9, 8, -0.7, -5.2, 8.2, -0.7, -4.8, 8.2, -0.7, -4.8, 8.1, -0.7, -4.8, 8.1, -0.7, -4.5, 8.1, -0.7, -4.9, 8, -0.7, -5.8, 8.9, -0.7, -4.5, 8.8, -0.7, -5.7, 8.8, -0.7, -4.5, 8.1, -0.7, -4.4, 8, -0.7, -4.9, 8, -0.7, -4.5, 8.8, -0.7, -4.4, 8, -0.7, -4.5, 8.1, -0.7, -5.8, 8.9, -0.7, -4.4, 8.9, -0.7, -4.5, 8.8, -0.7, -4.5, 8.8, -0.7, -4.4, 8.9, -0.7, -4.4, 8, -0.7, -5.8, 8.9, 0.7, -5.8, 8.5, 0.7, -5.7, 8.5, 0.7, -5.8, 8.9, 0.7, -5.7, 8.5, 0.7, -5.7, 8.6, 0.7, -5.8, 8.9, 0.7, -5.7, 8.6, 0.7, -5.7, 8.8, 0.7, -5.7, 8.5, 0.7, -5.7, 8.4, 0.7, -5.6, 8.4, 0.7, -5.7, 8.6, 0.7, -5.7, 8.5, 0.7, -5.6, 8.4, 0.7, -5.7, 8.6, 0.7, -5.6, 8.4, 0.7, -5.6, 8.5, 0.7, -5.7, 8.6, 0.7, -5.6, 8.5, 0.7, -5.6, 8.6, 0.7, -5.6, 8.4, 0.7, -5.6, 8.3, 0.7, -5.5, 8.3, 0.7, -5.6, 8.5, 0.7, -5.6, 8.4, 0.7, -5.5, 8.3, 0.7, -5.6, 8.5, 0.7, -5.5, 8.3, 0.7, -5.5, 8.4, 0.7, -5.6, 8.5, 0.7, -5.5, 8.4, 0.7, -5.5, 8.5, 0.7, -5.5, 8.3, 0.7, -5.5, 8.2, 0.7, -5.4, 8.3, 0.7, -5.5, 8.4, 0.7, -5.5, 8.3, 0.7, -5.4, 8.3, 0.7, -5.5, 8.4, 0.7, -5.4, 8.3, 0.7, -5.4, 8.4, 0.7, -5.4, 8.3, 0.7, -5.5, 8.2, 0.7, -5.3, 8.2, 0.7, -5.4, 8.3, 0.7, -5.3, 8.2, 0.7, -5.2, 8.2, 0.7, -5.3, 8.2, 0.7, -5.3, 8.1, 0.7, -5.2, 8.2, 0.7, -5.4, 8.3, 0.7, -5.2, 8.2, 0.7, -5.2, 8.3, 0.7, -5.2, 8.2, 0.7, -5.3, 8.1, 0.7, -4.9, 8.1, 0.7, -5.2, 8.2, 0.7, -4.9, 8.1, 0.7, -4.8, 8.1, 0.7, -4.9, 8.1, 0.7, -4.9, 8, 0.7, -4.8, 8.1, 0.7, -5.2, 8.2, 0.7, -4.8, 8.1, 0.7, -4.8, 8.2, 0.7, -4.8, 8.1, 0.7, -4.9, 8, 0.7, -4.5, 8.1, 0.7, -5.8, 8.9, 0.7, -5.7, 8.8, 0.7, -4.5, 8.8, 0.7, -4.5, 8.1, 0.7, -4.9, 8, 0.7, -4.4, 8, 0.7, -4.5, 8.8, 0.7, -4.5, 8.1, 0.7, -4.4, 8, 0.7, -5.8, 8.9, 0.7, -4.5, 8.8, 0.7, -4.4, 8.9, 0.7, -4.5, 8.8, 0.7, -4.4, 8, 0.7, -4.4, 8.9, 0.7, 4.3, 8.6, 0.5, 4.3, 8.5, 0.5, 4.4, 8.5, 0.5, 4.3, 8.6, 0.5, 4.4, 8.5, 0.5, 4.4, 8.6, 0.5, 4.3, 9.7, 0.1, 4.3, 9.6, 0.1, 4.4, 9.6, 0.1, 4.3, 9.7, 0.1, 4.4, 9.6, 0.1, 4.4, 9.7, 0.1, 4.3, 8.6, -0.4, 4.3, 8.5, -0.4, 4.4, 8.5, -0.4, 4.3, 8.6, -0.4, 4.4, 8.5, -0.4, 4.4, 8.6, -0.4, -5.8, 8.9, -0.8, -5.8, 8.5, -0.8, -5.7, 8.5, -0.8, -5.8, 8.9, -0.8, -5.7, 8.5, -0.8, -5.7, 8.6, -0.8, -5.8, 8.9, -0.8, -5.7, 8.6, -0.8, -5.7, 8.8, -0.8, -5.7, 8.5, -0.8, -5.7, 8.4, -0.8, -5.6, 8.4, -0.8, -5.7, 8.6, -0.8, -5.7, 8.5, -0.8, -5.6, 8.4, -0.8, -5.7, 8.6, -0.8, -5.6, 8.4, -0.8, -5.6, 8.5, -0.8, -5.7, 8.6, -0.8, -5.6, 8.5, -0.8, -5.6, 8.6, -0.8, -5.6, 8.4, -0.8, -5.6, 8.3, -0.8, -5.5, 8.3, -0.8, -5.6, 8.5, -0.8, -5.6, 8.4, -0.8, -5.5, 8.3, -0.8, -5.6, 8.5, -0.8, -5.5, 8.3, -0.8, -5.5, 8.4, -0.8, -5.6, 8.5, -0.8, -5.5, 8.4, -0.8, -5.5, 8.5, -0.8, -5.5, 8.3, -0.8, -5.5, 8.2, -0.8, -5.4, 8.3, -0.8, -5.5, 8.4, -0.8, -5.5, 8.3, -0.8, -5.4, 8.3, -0.8, -5.5, 8.4, -0.8, -5.4, 8.3, -0.8, -5.4, 8.4, -0.8, -5.4, 8.3, -0.8, -5.5, 8.2, -0.8, -5.3, 8.2, -0.8, -5.4, 8.3, -0.8, -5.3, 8.2, -0.8, -5.2, 8.2, -0.8, -5.3, 8.2, -0.8, -5.3, 8.1, -0.8, -5.2, 8.2, -0.8, -5.4, 8.3, -0.8, -5.2, 8.2, -0.8, -5.2, 8.3, -0.8, -5.2, 8.2, -0.8, -5.3, 8.1, -0.8, -4.9, 8.1, -0.8, -5.2, 8.2, -0.8, -4.9, 8.1, -0.8, -4.8, 8.1, -0.8, -4.9, 8.1, -0.8, -4.9, 8, -0.8, -4.8, 8.1, -0.8, -5.2, 8.2, -0.8, -4.8, 8.1, -0.8, -4.8, 8.2, -0.8, -4.8, 8.1, -0.8, -4.9, 8, -0.8, -4.5, 8.1, -0.8, -5.8, 8.9, -0.8, -5.7, 8.8, -0.8, -4.5, 8.8, -0.8, -4.5, 8.1, -0.8, -4.9, 8, -0.8, -4.4, 8, -0.8, -4.5, 8.8, -0.8, -4.5, 8.1, -0.8, -4.4, 8, -0.8, -5.8, 8.9, -0.8, -4.5, 8.8, -0.8, -4.4, 8.9, -0.8, -4.5, 8.8, -0.8, -4.4, 8, -0.8, -4.4, 8.9, -0.8, -6, 10.6, -1.1, -6, 9, -1.1, -5.9, 9, -1.1, -6, 10.6, -1.1, -5.9, 9, -1.1, -5.9, 9.1, -1.1, -6, 10.6, -1.1, -5.9, 9.1, -1.1, -5.9, 10.5, -1.1, -6, 10.6, -1.1, -5.9, 10.5, -1.1, -5.9, 10.6, -1.1, -5.9, 10.7, -1.1, -5.9, 10.6, -1.1, -5.8, 10.5, -1.1, -5.9, 10.6, -1.1, -5.9, 10.5, -1.1, -5.8, 10.5, -1.1, -5.9, 10.7, -1.1, -5.8, 10.5, -1.1, -5.8, 10.6, -1.1, -5.8, 10.6, -1.1, -5.8, 10.5, -1.1, -5.7, 10.5, -1.1, -5.9, 10.7, -1.1, -5.8, 10.6, -1.1, -5.7, 10.6, -1.1, -5.8, 10.6, -1.1, -5.7, 10.5, -1.1, -5.7, 10.6, -1.1, -5.7, 10.6, -1.1, -5.7, 10.5, -1.1, -5.6, 10.5, -1.1, -5.9, 10.7, -1.1, -5.7, 10.6, -1.1, -5.6, 10.6, -1.1, -5.7, 10.6, -1.1, -5.6, 10.5, -1.1, -5.6, 10.6, -1.1, -5.9, 9, -1.1, -5.9, 8.9, -1.1, -4.5, 9.1, -1.1, -5.9, 9.1, -1.1, -5.9, 9, -1.1, -4.5, 9.1, -1.1, -5.6, 10.6, -1.1, -5.6, 10.5, -1.1, -4.5, 10.5, -1.1, -4.5, 9.1, -1.1, -5.9, 8.9, -1.1, -4.4, 8.9, -1.1, -4.5, 10.5, -1.1, -4.5, 9.1, -1.1, -4.4, 8.9, -1.1, -5.9, 10.7, -1.1, -5.6, 10.6, -1.1, -4.4, 10.7, -1.1, -4.5, 10.5, -1.1, -4.4, 8.9, -1.1, -4.4, 10.7, -1.1, -5.6, 10.6, -1.1, -4.5, 10.5, -1.1, -4.4, 10.7, -1.1, -4.4, 12.6, -1.2, -4.4, 0.1, -1.2, -4.3, 12.6, -1.2, -4.3, 12.7, -1.2, -4.3, 12.6, -1.2, -4.2, 12.7, -1.2, -4.3, 12.6, -1.2, -4.4, 0.1, -1.2, -4, 0.1, -1.2, -4.2, 12.8, -1.2, -4.2, 12.7, -1.2, -4, 0.1, -1.2, -4.2, 12.7, -1.2, -4.3, 12.6, -1.2, -4, 0.1, -1.2, -4.2, 12.8, -1.2, -4, 0.1, -1.2, -4, 12.3, -1.2, -4.2, 12.8, -1.2, -4, 12.3, -1.2, 4, 12.3, -1.2, -4.2, 12.8, -1.2, 4, 12.3, -1.2, 4.2, 12.7, -1.2, 4, 12.3, -1.2, 4, 0.1, -1.2, 4.2, 12.7, -1.2, -4.2, 12.8, -1.2, 4.2, 12.7, -1.2, 4.2, 12.8, -1.2, 4.2, 12.7, -1.2, 4, 0.1, -1.2, 4.3, 12.6, -1.2, 4.2, 12.7, -1.2, 4.3, 12.6, -1.2, 4.3, 12.7, -1.2, 4.3, 12.6, -1.2, 4, 0.1, -1.2, 4.4, 0.1, -1.2, 4.3, 12.6, -1.2, 4.4, 0.1, -1.2, 4.4, 12.6, -1.2, -4.8, 0.1, -1.5, -4.8, 0, -1.5, -4.7, 0, -1.5, -4.8, 0.1, -1.5, -4.7, 0, -1.5, -4.7, 0.1, -1.5, 4.7, 0.1, -1.5, 4.7, 0, -1.5, 4.8, 0, -1.5, 4.7, 0.1, -1.5, 4.8, 0, -1.5, 4.8, 0.1, -1.5, -4.7, 0.1, -1.6, -4.7, 0, -1.6, 4.7, 0, -1.6, -4.7, 0.1, -1.6, 4.7, 0, -1.6, 4.7, 0.1, -1.6, 4.7, 0, 1.6, -4.7, 0, 1.5, -4.7, 0, 1.6, 4.7, 0, 1.6, 4.7, 0, 1.5, -4.7, 0, 1.5, -4.7, 0, 1.5, -4.8, 0, -1.5, -4.8, 0, 1.5, 4.8, 0, 1.5, -4.8, 0, -1.5, 4.7, 0, 1.5, 4.7, 0, 1.5, -4.8, 0, -1.5, -4.7, 0, 1.5, 4.8, 0, 1.5, -4.7, 0, -1.5, -4.8, 0, -1.5, 4.8, 0, 1.5, 4.7, 0, -1.5, -4.7, 0, -1.5, 4.8, 0, 1.5, 4.8, 0, -1.5, 4.7, 0, -1.5, 4.7, 0, -1.5, -4.7, 0, -1.6, -4.7, 0, -1.5, 4.7, 0, -1.5, 4.7, 0, -1.6, -4.7, 0, -1.6, -4.4, 8, 0.8, -4.9, 8, 0.7, -4.9, 8, 0.8, -4.4, 8, 0.8, -4.4, 8, 0.7, -4.9, 8, 0.7, -4.4, 8, -0.7, -4.9, 8, -0.8, -4.9, 8, -0.7, -4.4, 8, -0.7, -4.4, 8, -0.8, -4.9, 8, -0.8, -4.9, 8.1, 0.8, -5.3, 8.1, 0.7, -5.3, 8.1, 0.8, -4.9, 8.1, 0.8, -4.9, 8.1, 0.7, -5.3, 8.1, 0.7, -4.9, 8.1, -0.7, -5.3, 8.1, -0.8, -5.3, 8.1, -0.7, -4.9, 8.1, -0.7, -4.9, 8.1, -0.8, -5.3, 8.1, -0.8, -5.3, 8.2, 0.8, -5.5, 8.2, 0.7, -5.5, 8.2, 0.8, -5.3, 8.2, 0.8, -5.3, 8.2, 0.7, -5.5, 8.2, 0.7, -5.3, 8.2, -0.7, -5.5, 8.2, -0.8, -5.5, 8.2, -0.7, -5.3, 8.2, -0.7, -5.3, 8.2, -0.8, -5.5, 8.2, -0.8, -5.5, 8.3, 0.8, -5.6, 8.3, 0.7, -5.6, 8.3, 0.8, -5.5, 8.3, 0.8, -5.5, 8.3, 0.7, -5.6, 8.3, 0.7, -5.5, 8.3, -0.7, -5.6, 8.3, -0.8, -5.6, 8.3, -0.7, -5.5, 8.3, -0.7, -5.5, 8.3, -0.8, -5.6, 8.3, -0.8, -5.6, 8.4, 0.8, -5.7, 8.4, 0.7, -5.7, 8.4, 0.8, -5.6, 8.4, 0.8, -5.6, 8.4, 0.7, -5.7, 8.4, 0.7, -5.6, 8.4, -0.7, -5.7, 8.4, -0.8, -5.7, 8.4, -0.7, -5.6, 8.4, -0.7, -5.6, 8.4, -0.8, -5.7, 8.4, -0.8, -5.7, 8.5, 0.8, -5.8, 8.5, 0.7, -5.8, 8.5, 0.8, -5.7, 8.5, 0.8, -5.7, 8.5, 0.7, -5.8, 8.5, 0.7, -5.7, 8.5, -0.7, -5.8, 8.5, -0.8, -5.8, 8.5, -0.7, -5.7, 8.5, -0.7, -5.7, 8.5, -0.8, -5.8, 8.5, -0.8, 4.4, 8.6, 0.5, 4.3, 8.6, 0.4, 4.3, 8.6, 0.5, 4.4, 8.6, 0.5, 4.4, 8.6, 0.4, 4.3, 8.6, 0.4, 4.4, 8.6, -0.4, 4.3, 8.6, -0.5, 4.3, 8.6, -0.4, 4.4, 8.6, -0.4, 4.4, 8.6, -0.5, 4.3, 8.6, -0.5, -4.5, 8.8, 0.8, -5.7, 8.8, 0.7, -5.7, 8.8, 0.8, -4.5, 8.8, 0.8, -4.5, 8.8, 0.7, -5.7, 8.8, 0.7, -4.5, 8.8, -0.7, -5.7, 8.8, -0.8, -5.7, 8.8, -0.7, -4.5, 8.8, -0.7, -4.5, 8.8, -0.8, -5.7, 8.8, -0.8, -4.4, 8.9, 1.1, -5.8, 8.9, 0.8, -5.9, 8.9, 1.1, -4.4, 8.9, 1.1, -4.4, 8.9, 0.8, -5.8, 8.9, 0.8, -5.8, 8.9, 0.8, -5.8, 8.9, 0.7, -5.9, 8.9, 1.1, -5.8, 8.9, 0.7, -5.8, 8.9, -0.7, -5.9, 8.9, 1.1, -4.4, 8.9, 0.7, -5.8, 8.9, -0.7, -5.8, 8.9, 0.7, -4.4, 8.9, 0.7, -4.4, 8.9, -0.7, -5.8, 8.9, -0.7, -5.8, 8.9, -0.7, -5.8, 8.9, -0.8, -5.9, 8.9, 1.1, -5.8, 8.9, -0.8, -5.9, 8.9, -1.1, -5.9, 8.9, 1.1, -4.4, 8.9, -0.8, -5.9, 8.9, -1.1, -5.8, 8.9, -0.8, -4.4, 8.9, -0.8, -4.4, 8.9, -1.1, -5.9, 8.9, -1.1, -5.9, 9, 1.1, -6, 9, -1.1, -6, 9, 1.1, -5.9, 9, 1.1, -5.9, 9, -1.1, -6, 9, -1.1, 4.4, 9.7, 0.1, 4.3, 9.7, -0.1, 4.3, 9.7, 0.1, 4.4, 9.7, 0.1, 4.4, 9.7, -0.1, 4.3, 9.7, -0.1, -5.8, 10.5, 1.1, -5.8, 10.5, 1, -5.9, 10.5, 1.1, -5.7, 10.5, 1.1, -5.8, 10.5, 1, -5.8, 10.5, 1.1, -5.6, 10.5, 1.1, -5.7, 10.5, 1, -5.7, 10.5, 1.1, -5.7, 10.5, 1.1, -5.7, 10.5, 1, -5.8, 10.5, 1, -4.5, 10.5, 1.1, -5.6, 10.5, 1, -5.6, 10.5, 1.1, -5.6, 10.5, 1.1, -5.6, 10.5, 1, -5.7, 10.5, 1, -5.7, 10.5, 1, -5.8, 10.5, -1, -5.8, 10.5, 1, -5.8, 10.5, 1, -5.8, 10.5, -1, -5.9, 10.5, 1.1, -5.6, 10.5, 1, -5.8, 10.5, -1, -5.7, 10.5, 1, -5.6, 10.5, 1, -5.7, 10.5, -1, -5.8, 10.5, -1, -4.5, 10.5, 1.1, -5.6, 10.5, -1, -5.6, 10.5, 1, -5.6, 10.5, 1, -5.6, 10.5, -1, -5.7, 10.5, -1, -5.8, 10.5, -1, -5.9, 10.5, -1.1, -5.9, 10.5, 1.1, -5.7, 10.5, -1, -5.8, 10.5, -1.1, -5.8, 10.5, -1, -5.8, 10.5, -1, -5.8, 10.5, -1.1, -5.9, 10.5, -1.1, -5.6, 10.5, -1, -5.7, 10.5, -1.1, -5.7, 10.5, -1, -5.7, 10.5, -1, -5.7, 10.5, -1.1, -5.8, 10.5, -1.1, -4.5, 10.5, 1.1, -5.6, 10.5, -1.1, -5.6, 10.5, -1, -5.6, 10.5, -1, -5.6, 10.5, -1.1, -5.7, 10.5, -1.1, -4.5, 10.5, 1.1, -4.5, 10.5, -1.1, -5.6, 10.5, -1.1, 4, 12.3, 1.2, -4, 12.3, -1.2, -4, 12.3, 1.2, 4, 12.3, 1.2, 4, 12.3, -1.2, -4, 12.3, -1.2, 4.7, 0.1, 1.6, -4.7, 0.1, 1.6, -4.7, 0.1, 1.5, 4.7, 0.1, 1.6, -4.7, 0.1, 1.5, 4.7, 0.1, 1.5, -4.7, 0.1, 1.5, -4.8, 0.1, 1.5, -4.4, 0.1, 1.2, 4.8, 0.1, 1.5, 4.7, 0.1, 1.5, -4.4, 0.1, 1.2, 4.7, 0.1, 1.5, -4.7, 0.1, 1.5, -4.4, 0.1, 1.2, 4.8, 0.1, 1.5, -4.4, 0.1, 1.2, -4, 0.1, 1.2, 4.8, 0.1, 1.5, -4, 0.1, 1.2, 4, 0.1, 1.2, 4.8, 0.1, 1.5, 4, 0.1, 1.2, 4.4, 0.1, 1.2, -4.4, 0.1, 1.2, -4.8, 0.1, 1.5, -4.4, 0.1, -1.2, 4, 0.1, 1.2, -4, 0.1, 1.2, -4, 0.1, -1.2, 4, 0.1, 1.2, -4, 0.1, -1.2, 4, 0.1, -1.2, 4.8, 0.1, 1.5, 4.4, 0.1, 1.2, 4.4, 0.1, -1.2, 4, 0.1, -1.2, -4, 0.1, -1.2, -4.8, 0.1, -1.5, 4.4, 0.1, -1.2, 4, 0.1, -1.2, -4.8, 0.1, -1.5, -4.4, 0.1, -1.2, -4.8, 0.1, 1.5, -4.8, 0.1, -1.5, -4, 0.1, -1.2, -4.4, 0.1, -1.2, -4.8, 0.1, -1.5, 4.4, 0.1, -1.2, -4.8, 0.1, -1.5, -4.7, 0.1, -1.5, 4.8, 0.1, 1.5, 4.4, 0.1, -1.2, 4.7, 0.1, -1.5, 4.4, 0.1, -1.2, -4.7, 0.1, -1.5, 4.7, 0.1, -1.5, 4.8, 0.1, 1.5, 4.7, 0.1, -1.5, 4.8, 0.1, -1.5, 4.7, 0.1, -1.5, -4.7, 0.1, -1.5, -4.7, 0.1, -1.6, 4.7, 0.1, -1.5, -4.7, 0.1, -1.6, 4.7, 0.1, -1.6, -4.5, 8.1, 0.8, -4.8, 8.1, 0.8, -4.8, 8.1, 0.7, -4.5, 8.1, 0.8, -4.8, 8.1, 0.7, -4.5, 8.1, 0.7, -4.5, 8.1, -0.7, -4.8, 8.1, -0.7, -4.8, 8.1, -0.8, -4.5, 8.1, -0.7, -4.8, 8.1, -0.8, -4.5, 8.1, -0.8, -4.8, 8.2, 0.8, -5.2, 8.2, 0.8, -5.2, 8.2, 0.7, -4.8, 8.2, 0.8, -5.2, 8.2, 0.7, -4.8, 8.2, 0.7, -4.8, 8.2, -0.7, -5.2, 8.2, -0.7, -5.2, 8.2, -0.8, -4.8, 8.2, -0.7, -5.2, 8.2, -0.8, -4.8, 8.2, -0.8, -5.2, 8.3, 0.8, -5.4, 8.3, 0.8, -5.4, 8.3, 0.7, -5.2, 8.3, 0.8, -5.4, 8.3, 0.7, -5.2, 8.3, 0.7, -5.2, 8.3, -0.7, -5.4, 8.3, -0.7, -5.4, 8.3, -0.8, -5.2, 8.3, -0.7, -5.4, 8.3, -0.8, -5.2, 8.3, -0.8, -5.4, 8.4, 0.8, -5.5, 8.4, 0.8, -5.5, 8.4, 0.7, -5.4, 8.4, 0.8, -5.5, 8.4, 0.7, -5.4, 8.4, 0.7, -5.4, 8.4, -0.7, -5.5, 8.4, -0.7, -5.5, 8.4, -0.8, -5.4, 8.4, -0.7, -5.5, 8.4, -0.8, -5.4, 8.4, -0.8, -5.5, 8.5, 0.8, -5.6, 8.5, 0.8, -5.6, 8.5, 0.7, -5.5, 8.5, 0.8, -5.6, 8.5, 0.7, -5.5, 8.5, 0.7, 4.4, 8.5, 0.5, 4.3, 8.5, 0.5, 4.3, 8.5, 0.4, 4.4, 8.5, 0.5, 4.3, 8.5, 0.4, 4.4, 8.5, 0.4, 4.4, 8.5, -0.4, 4.3, 8.5, -0.4, 4.3, 8.5, -0.5, 4.4, 8.5, -0.4, 4.3, 8.5, -0.5, 4.4, 8.5, -0.5, -5.5, 8.5, -0.7, -5.6, 8.5, -0.7, -5.6, 8.5, -0.8, -5.5, 8.5, -0.7, -5.6, 8.5, -0.8, -5.5, 8.5, -0.8, -5.6, 8.6, 0.8, -5.7, 8.6, 0.8, -5.7, 8.6, 0.7, -5.6, 8.6, 0.8, -5.7, 8.6, 0.7, -5.6, 8.6, 0.7, -5.6, 8.6, -0.7, -5.7, 8.6, -0.7, -5.7, 8.6, -0.8, -5.6, 8.6, -0.7, -5.7, 8.6, -0.8, -5.6, 8.6, -0.8, -4.5, 9.1, 1.1, -5.9, 9.1, 1.1, -5.9, 9.1, -1.1, -4.5, 9.1, 1.1, -5.9, 9.1, -1.1, -4.5, 9.1, -1.1, 4.4, 9.6, 0.1, 4.3, 9.6, 0.1, 4.3, 9.6, -0.1, 4.4, 9.6, 0.1, 4.3, 9.6, -0.1, 4.4, 9.6, -0.1, -5.9, 10.6, 1.1, -6, 10.6, 1.1, -6, 10.6, -1.1, -5.9, 10.6, 1.1, -6, 10.6, -1.1, -5.9, 10.6, -1.1, -4.4, 10.7, 1.1, -5.9, 10.7, 1.1, -5.9, 10.7, -1.1, -4.4, 10.7, 1.1, -5.9, 10.7, -1.1, -4.4, 10.7, -1.1, -4.3, 12.6, 1.2, -4.4, 12.6, 1.2, -4.4, 12.6, -1.2, -4.3, 12.6, 1.2, -4.4, 12.6, -1.2, -4.3, 12.6, -1.2, 4.4, 12.6, 1.2, 4.3, 12.6, 1.2, 4.3, 12.6, -1.2, 4.4, 12.6, 1.2, 4.3, 12.6, -1.2, 4.4, 12.6, -1.2, -4.2, 12.7, 1.2, -4.3, 12.7, 1.2, -4.3, 12.7, -1.2, -4.2, 12.7, 1.2, -4.3, 12.7, -1.2, -4.2, 12.7, -1.2, 4.3, 12.7, 1.2, 4.2, 12.7, 1.2, 4.2, 12.7, -1.2, 4.3, 12.7, 1.2, 4.2, 12.7, -1.2, 4.3, 12.7, -1.2, 4.2, 12.8, 1.2, -4.2, 12.8, 1.2, -4.2, 12.8, -1.2, 4.2, 12.8, 1.2, -4.2, 12.8, -1.2, 4.2, 12.8, -1.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ov6f"]
cull_mode = 2
shading_mode = 0
albedo_color = Color(0.41636, 0.42, 0.3108, 1)

[sub_resource type="BoxMesh" id="BoxMesh_wnaj2"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_8ov6f")
uv2_padding = 1.0
size = Vector3(2, 3.125, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_m7gyg"]
size = Vector3(2.15, 3, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tvxis"]
albedo_color = Color(1, 1, 0, 1)
emission_enabled = true
emission = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nk38v"]
material = SubResource("StandardMaterial3D_tvxis")

[node name="LevelExitPortal" type="StaticBody3D"]
script = ExtResource("1_51yx3")

[node name="ExitPortalMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0.01)
mesh = ExtResource("2_hbohm")

[node name="ExitPortalCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0.01)
shape = SubResource("ConcavePolygonShape3D_p3n8x")

[node name="ExitPortalSurfaceMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58, 0)
layers = 2
mesh = SubResource("BoxMesh_wnaj2")
skeleton = NodePath("../..")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
shape = SubResource("BoxShape3D_m7gyg")

[node name="ExitPortalLight" type="MeshInstance3D" parent="."]
transform = Transform3D(0.366902, 0, 0, 0, 0.363975, 0, 0, 0, 0.476615, -1.29746, 2.4471, 0)
mesh = SubResource("BoxMesh_nk38v")

[node name="ExitSpotLight3D" type="SpotLight3D" parent="ExitPortalLight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6)
light_color = Color(1, 1, 0.0627451, 1)
spot_range = 25.0
spot_attenuation = 2.0
spot_angle = 65.0

[node name="ExitSpotLight3D2" type="SpotLight3D" parent="ExitPortalLight"]
transform = Transform3D(1, 0, 0, 0, -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0.6)
light_color = Color(1, 1, 0, 1)
spot_range = 25.0
spot_attenuation = 2.0
spot_angle = 65.0

[node name="ExitSign" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.247358, -0.0362488, -2.16247e-08, -0.0362488, 0.247358, -3.16897e-09, 2.18557e-08, 0, -0.25, 0.0269192, 2.97818, -0.31)
mesh = ExtResource("3_b64ha")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(-0.999903, 0.0139622, -8.74143e-08, 0.0139622, 0.999903, 1.22061e-09, 8.74228e-08, 0, -1, -0.0214141, 3.2501, -0.431507)
light_color = Color(1, 1, 0, 1)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
